Reorganise the minimal styles and small styling changes: - add whitespace/padding/margin - fix feedback styles - import 'default' less files where possible - better height for blocks on the front page (fill the page)

--- a/less/gn_editor_minimal.less
+++ b/less/gn_editor_minimal.less
@@ -223,9 +223,6 @@
           display: none;
         }
       }
-      .table {
-        margin-bottom: -10px;
-      }
       fieldset {
         margin: 10px 15px;
         padding-bottom: 10px;
@@ -279,6 +276,9 @@
         padding-top: 0;
         padding-bottom: 0;
       }
+    }
+    .gn-validation-report {
+      margin: 0 15px;
     }
   }
 
