--- a/less/gn_formatter_viewer_minimal.less
+++ b/less/gn_formatter_viewer_minimal.less
@@ -1,13 +1,4 @@
 @import "../../../style/gn";
 @import "../../../style/gn_metadata";
-
-.formatter-container {
-  .metadata {
-    > .panel-heading {
-      display: none;
-    }
-    &.panel {
-      border: none;
-    }
-  }
-}
+// import default formatter styles
+@import "../../default/less/gn_formatter_viewer_default.less";
