--- a/less/gn_result_minimal.less
+++ b/less/gn_result_minimal.less
@@ -95,19 +95,21 @@
     padding-top: 32px;
     section {
       margin-bottom: 25px;
-      h2 {
+      h1, h2 {
         font-size: 18px;
         font-weight: 500;
         margin-top: 0;
+        margin-bottom: 20px;
         i {
           display: none;
         }
       }
     }
     .gn-img-thumbnail, .gn-img-extent {
-      width: 100%;
+      max-width: 100%;
       padding: 0;
       border-radius: 0;
+      margin-bottom: 10px;
     }
     .gn-img-thumbnail-caption {
       text-align: left;
