--- a/less/gn_variables_minimal.less
+++ b/less/gn_variables_minimal.less
@@ -42,11 +42,11 @@
 // home page
 // 
 // ----- topics block
-@gn-topics-background-color: #fbfbfb; // @well-bg;
+@gn-topics-background-color: #fbfbfbe3; // #fbfbfb; // @well-bg;
 @gn-topics-color: #333;
 @gn-topics-color-hover: #000;
 // ----- info block
-@gn-info-background-color: #f1f1f1; // @body-bg;
+@gn-info-background-color: #f1f1f1f0; // #f1f1f1; // @body-bg;
 // ----- resultcards
 @gn-resultcard-background-color: @body-bg;
 @gn-resultcard-title-background-color: #4a4a4a; // @body-bg;
